--- a/example.ipynb
+++ b/example.ipynb
@@ -11,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from components import *\n",
+    "from LinkAnalyzer.components import *\n",
     "\n",
     "\n",
     "# Create a ground station platform\n",
@@ -35,21 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EIRP: 79.74307096047113\n",
-      "FSPL: 206.96601586778434\n",
-      "G_tx: 60.73277100383131\n",
-      "G_rx: 33.36246399047171\n",
-      "G_t: 6.16087095641214\n",
-      "C: -105.8604809168415\n",
-      "C_n0: 95.53792604909893\n",
-      "EB_n0: 19.103399284237042\n"
+      "EIRP:   79.74 dB\n",
+      "                FSPL:   206.97 dB\n",
+      "                G_tx:   60.73 dB\n",
+      "                G_rx:   33.36 dB\n",
+      "                G_t:    6.16 dB\n",
+      "                C_n0:   95.54 dB\n",
+      "                Eb_n0:  19.10 dB\n"
      ]
     }
    ],
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
