Yesss good structure finally - easy to extend now

--- a/example.ipynb
+++ b/example.ipynb
@@ -42,28 +42,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EIRP:   79.74 dB\n",
-      "                FSPL:   206.97 dB\n",
-      "                G_tx:   60.73 dB\n",
-      "                G_rx:   33.36 dB\n",
-      "                G_t:    6.16 dB\n",
-      "                C_n0:   95.54 dB\n",
-      "                Eb_n0:  19.10 dB\n"
+      "Link Budget Report\n",
+      "                Frequency:      14000000000.0 Hz\n",
+      "                Path Distance:  38000000.0 m\n",
+      "                EIRP:           79.74 dBW\n",
+      "                FSPL:           206.97 dB\n",
+      "                G_tx:           60.73 dBi\n",
+      "                G_rx:           33.36 dBi\n",
+      "                G/T:            6.16 dB/K\n",
+      "                C/N0:           95.54 dB-Hz\n",
+      "                Eb/n0:          19.10 dB\n"
      ]
     }
    ],
    "source": [
     "# Ground station antenna!\n",
-    "gs_antenna = Antenna(D=10, P=200, eta=0.55, L_line=4, platform=gs)\n",
+    "gs_antenna = Antenna(D=10, eta=0.55, platform=gs)\n",
     "\n",
     "# Satellite antenna!\n",
-    "geo_antenna = ShapedAntenna(eta=0.7, L_line=2, platform=geo)\n",
+    "geo_antenna = ShapedAntenna(eta=0.7, platform=geo)\n",
     "\n",
     "# Define an RF link between the antennas\n",
     "uplink = RF(f=14e9, TX=gs_antenna, RX=geo_antenna, Rb=44e6)\n",
     "\n",
     "# Run the solver!\n",
-    "uplink.compute()\n",
+    "uplink.compute(P_tx=200, L_line_tx=4, L_line_rx=2)\n",
     "uplink.report()"
    ]
   },
