Last bit of reorganisation in RF()

--- a/example.ipynb
+++ b/example.ipynb
@@ -60,13 +60,13 @@
     "gs_antenna = Antenna(D=10, eta=0.55, platform=gs)\n",
     "\n",
     "# Satellite antenna!\n",
-    "geo_antenna = ShapedAntenna(eta=0.7, platform=geo)\n",
+    "geo_antenna = ShapedAntenna(A_theta=13.3, eta=0.7, platform=geo)\n",
     "\n",
     "# Define an RF link between the antennas\n",
-    "uplink = RF(f=14e9, TX=gs_antenna, RX=geo_antenna, Rb=44e6)\n",
+    "uplink = RF(TX=gs_antenna, RX=geo_antenna, Ts=525)\n",
     "\n",
-    "# Run the solver!\n",
-    "uplink.compute(P_tx=200, L_line_tx=4, L_line_rx=2)\n",
+    "# Run the solver! Parameters here can be optimized intelligently\n",
+    "uplink.compute(f=14e9, P_tx=200, Rb=44e6, L_line_tx=4, L_line_rx=2, mod='QPSK', m=1)\n",
     "uplink.report()"
    ]
   },
