--- a/example.ipynb
+++ b/example.ipynb
@@ -11,13 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_6871/3344894836.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "  from IPython.core.display import display, HTML\n"
+     ]
+    }
+   ],
    "source": [
-    "from IPython.core.display import display, HTML\n",
-    "from pyvis import network as net\n",
-    "import networkx as nx\n",
     "import numpy as np\n",
     "\n",
     "from LinkAnalyzer.components import *\n",
@@ -39,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -49,13 +55,10 @@
       "Link Budget Report\n",
       "                Frequency:      14000000000.0 Hz\n",
       "                Path Distance:  38000000.0 m\n",
-      "                EIRP:           79.74 dBW\n",
+      "                Power (W):      21.8937451670405 W\n",
+      "                EIRP:           78.63 dBW\n",
       "                FSPL:           206.97 dB\n",
-      "                G_tx:           60.73 dBi\n",
-      "                G_rx:           33.36 dBi\n",
-      "                G/T:            6.16 dB/K\n",
-      "                C/N0:           95.54 dB-Hz\n",
-      "                Eb/n0:          19.10 dB\n"
+      "                Eb/n0:          17.99 dB\n"
      ]
     }
    ],
@@ -66,14 +69,11 @@
     "# Satellite antenna!\n",
     "geo_antenna = ShapedAntenna(A_theta=13.3, eta=0.7, platform=geo)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "# Define an RF link between the antennas\n",
     "uplink = RF(TX=gs_antenna, RX=geo_antenna, Ts=525)\n",
     "\n",
     "# Run the solver! Parameters here can be optimized intelligently\n",
-    "uplink.compute(f=14e9, P_tx=200, Rb=44e6, L_line_tx=4, L_line_rx=2, mod='QPSK', m=1)\n",
+    "uplink.compute(f=14e9, Rb=44e6, m=2, L_line_tx=4, L_line_rx=2, BER=1e-9)\n",
     "uplink.report()"
    ]
   },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
