--- a/example.ipynb
+++ b/example.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_6871/3344894836.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
-      "  from IPython.core.display import display, HTML\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -45,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -55,10 +46,11 @@
       "Link Budget Report\n",
       "                Frequency:      14000000000.0 Hz\n",
       "                Path Distance:  38000000.0 m\n",
-      "                Power (W):      21.8937451670405 W\n",
-      "                EIRP:           78.63 dBW\n",
+      "                Power (W):      2000 W\n",
+      "                EIRP:           89.74 dBW\n",
       "                FSPL:           206.97 dB\n",
-      "                Eb/n0:          17.99 dB\n"
+      "                Eb/n0:          29.10 dB\n",
+      "                BER:            1.18e-14\n"
      ]
     }
    ],
@@ -73,7 +65,7 @@
     "uplink = RF(TX=gs_antenna, RX=geo_antenna, Ts=525)\n",
     "\n",
     "# Run the solver! Parameters here can be optimized intelligently\n",
-    "uplink.compute(f=14e9, Rb=44e6, m=2, L_line_tx=4, L_line_rx=2, BER=1e-9)\n",
+    "uplink.compute(f=14e9, Bw=1e9, P_tx=200, Rb=44e6, m=2, L_line_tx=4, L_line_rx=2, BER=1e-9)\n",
     "uplink.report()"
    ]
   },
@@ -86,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
